# probabilistic_light_source_modelling

./: .gitignore  .gitmodules  README.md  SolveEstimatedReflectancePatch.m  abs error GP symm.fig  config.yaml  gp symm with var.fig  main_HS_estimated_reflectance.asv  main_HS_estimated_reflectance.m  main_estimated_reflectance_mitsuba.m  main_light_modelling.m  main_light_simulator.m  main_light_triangulation.m
camera_system_calibration/: camera_system_optimised_parameters.mat  camera_system_optimised_parametersOLD.mat
code/: GP_mean_function.mlx  LightSimulator.m  LightSourceLeastSqrObj.m  LightSourceModelEquations.mlx
docs/: index.html  index.md
ext_lib/: EstimateBalancingFactor.m
ext_lib/krebs-reflectance-estimationOLD/: method_krebs_logversion.m
ext_lib/krebs-shape-reflectance-estimation/: Estimate_Sgk_WithShape.m
ext_lib/mex_ChArUco_Pose/: CMakeLists.txt  README.md  helper_functions.h  mexArucoPixDect_test.m  mexCharucoPoseEst_test.m  mex_aruco_pixel_detection.cpp  mex_charuco_pose_est.cpp
frame_camera_intrinsic/: blackfly.mat
krebs-shape-reflectance-estimation/: Estimate_Sgk_WithShape.m  ReflectanceEstimationKrebs.m  SAM_Hypercube.m
parameter_files/: HS_estimated_reflectance.yaml  config.yaml  light_modelling.yaml  light_triangulation.yaml  white_stripe_reflectance.csv
point_light_triangulation/: FrameIntrinsicParam.mat
src/: LightSimulator.m  LightSrcOptmGP.m  LightSrcOptmLS.m
src_code/: ArucoPixDect.mexa64  ArucoPosEst.m  CharucoPosEst.mexa64  GP_mean_function.mlx  LightSimulator.m  LightSrcOptmGP.m  SolveEstimatedReflectance.m
(+12 files in other folders)
